#+STARTUP: content

* Changelog

** Planned

** Unreleased

- =Added= Functions to retrieve German synonyms for a word from [[https://www.openthesaurus.de/]].

** Remark

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

Type of changes:

- =Added= for new features.
- =Changed= for changes in existing functionality.
- =Deprecated= for soon-to-be removed features.
- =Removed= for now removed features.
- =Fixed= for any bug fixes.
- =Security= in case of vulnerabilities.