@@ -8,9 +8,9 @@ Lookup definitions and synonyms for German words with Emacs.
 
 ** Main features                                                :noexport_0:
 
-- Lookup synonyms for a word and insert one into the current buffer.
-- Show definitions for a word in an Org-mode buffer.
-- Show synonyms for a word in an Org-mode buffer.
+- Lookup synonyms for a word (read from minibuffer or word at point) and insert the selected synonym into the current buffer, replace the word at point or add it to the kill ring. 
+- Show synonyms for a word (read from minibuffer or word at point) in an Org-mode buffer, insert them into the current Org-mode buffer or add them to the kill ring.
+- Show definitions for a word (read from minibuffer or word at point) in an Org-mode buffer, insert them into the current Org-mode buffer or add them to the kill ring.
 - Show both in an Org-mode buffer.
 
 Definitions are retrieved from [[https://www.dwds.de/]] and synonyms from [[https://www.openthesaurus.de/]].
@@ -33,15 +33,32 @@ Definitions are retrieved from [[https://www.dwds.de/]] and synonyms from [[http
 
 # Describe how to install this package.
 
-This package is hosted on Github only. Use your favourite way to install like [[https://github.com/radian-software/straight.el][Straight]], [[https://github.com/quelpa/quelpa][Quelpa]]. Starting with Emacs 29 ~package-vc-install~ may be used. 
+This package is hosted on Github. Use your favourite way to install like [[https://github.com/radian-software/straight.el][Straight]] or [[https://github.com/quelpa/quelpa][Quelpa]]. Starting with Emacs 29 ~package-vc-install~ may be used.
 
 ** Usage
 :PROPERTIES:
 :CUSTOM_ID: usage
 :END:
 
-# Describe the usage.
+There are functions to show the definitions of a word, the synonyms for a word or both at the same time.
 
+Functions to show *synonyms*. If a word is not in its baseform, the synonyms for the baseform are looked up (the baseform for Fahrzeuge is Fahrzeug for instance):
+
+- ~woerterbuch-synonyms-show-in-org-buffer~
+  Show the synonyms for a word in an Org buffer. Reads the word from the minibuffer.
+- ~woerterbuch-synonyms-show-in-org-buffer-for-word-at-point~
+  Show the synonyms for a word at point in an Org buffer.
+- ~woerterbuch-synonyms-insert-into-org-buffer~
+  Read a word from the minibuffer and insert the synonyms as a list into the current Org buffer. If called with a prefix arg (C-u), it adds a heading with the word as the title before the list.
+- ~woerterbuch-synonyms-kill-as-org-mode-syntax~
+  Add the synonyms for word read from the minibuffer to the kill ring as Org syntax. If called with a prefix arg (C-u), it adds a heading with the word as title before the list.
+- ~woerterbuch-synonyms-insert~
+  Lookup synonyms for word read from minibuffer and insert selected word at point. If called with a prefix arg (C-u) the selected word is added to the kill ring instead.
+- ~woerterbuch-synonyms-lookup-word-at-point~
+  Lookup synonyms for word at point and add to kill ring. 
+- ~woerterbuch-synonyms-replace-word-at-point~
+  Lookup synonyms for wort at point or selection and replace it. 
+  
 ** Customization
 :PROPERTIES:
 :CUSTOM_ID: customization
@@ -51,33 +68,28 @@ This package is hosted on Github only. Use your favourite way to install like [[
 
 Set the following variables to change the behaviour of the package:
 
-| Variable | Default | Description |
-|----------+---------+-------------|
-|          |         |             |
+- ~woerterbuch-org-buffer-display-function~ /#'pop-to-buffer/
+  Function used to the display the org buffer with the definitions or synonyms. The function takes buffer as argument.
+- ~woerterbuch-list-bullet-point~ /"-"/
+  String to use as list bullet point when converting synonyms or definitions to a list.
+- ~woerterbuch-insert-org-heading-format~ /"%s %s\n\n%s"/
+  Format used when inserting an Org heading before content.
 
 *** Faces
 
-The following faces are defined:
-
-| Face | Description |
-|------+-------------|
-|      |             |
-|      |             |
+The package defines no faces.
 
 ** Key Bindings
 :PROPERTIES:
 :CUSTOM_ID: key-bindings
 :END:
 
-# Whatever needs to be said about that.
-
-| Key | Action | Description |
-|-----+--------+-------------|
-|     |        |             |
+- @@html:<kbd>@@~C-c C-q~@@html:</kbd>@@ is bound to ~quit-window~ in the Org buffer showing the definitions or synonyms.
 
 *** Hydra
 
 # Example of a hydra definition.
+# TODO show code to define a hydra.
 
 ** Changelog
 :PROPERTIES:
